--- a/views/index.html
+++ b/views/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script type="text/javascript" src="javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/userwork.js" ></script>
-    <script type="text/javascript" src="javascripts/cinema.js" ></script>
-    <script type="text/javascript" src="javascripts/hotcinema.js"></script>
-    <script type="text/javascript" src="javascripts/nextcinema.js"></script>
-    <link rel='stylesheet' href='stylesheets/cinema.css' />
+    <script type="text/javascript" src="javascripts/ciname.js" ></script>
+    <script type="text/javascript" src="javascripts/hotciname.js"></script>
+    <script type="text/javascript" src="javascripts/nextciname.js"></script>
+    <link rel='stylesheet' href='stylesheets/ciname.css' />
     <link rel='stylesheet' href='stylesheets/index_style.css' />
   </head>
   
@@ -20,7 +20,7 @@
     </div>
 
     <!--显示电影列表-->
-    <div type="cinema">
+    <div type="ciname">
       <div class="tabs" id="menu">
         <ul id="tabs">
           <li class="tab-nav">
@@ -45,22 +45,22 @@
        <div style="clear:both"></div>
        <div id="tabs-body" class="tabs-body">
          <div style="display:block">
-          <ul id="hotcinema">
-            <li id="cinemasummary0" class="cinemasummary">
+          <ul id="hotciname">
+            <li id="cinamesummary0" class="cinamesummary">
             </li>
-            <li id="cinemasummary1" class="cinemasummary">
+            <li id="cinamesummary1" class="cinamesummary">
             </li> 
-            <li id="cinemasummary2" class="cinemasummary">
+            <li id="cinamesummary2" class="cinamesummary">
             </li> 
           </ul>
          </div>
          <div style="display:none">
-          <ul id="nextcinema">
-            <li id="nextcinema0" class="cinemasummary">
+          <ul id="nextciname">
+            <li id="nextciname0" class="cinamesummary">
             </li>
-            <li id="nextcinema1" class="cinemasummary">
+            <li id="nextciname1" class="cinamesummary">
             </li> 
-            <li id="nextcinema2" class="cinemasummary">
+            <li id="nextciname2" class="cinamesummary">
             </li> 
           </ul>
          </div>
